guardar cambios en el readme y en comentarios
